--- a/dgWatson2Do-gagan/dgWatson2Do-gagan.csproj
+++ b/dgWatson2Do-gagan/dgWatson2Do-gagan.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>dgWatson2Dogagan</RootNamespace>
     <AssemblyName>dgWatson2Do-gagan</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <ReleaseVersion>0.2</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
